--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "antd": "^5.13.3",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.7.3",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.5.0",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
     "leaflet-routing-machine": "^3.2.12",
