--- a/package.json
+++ b/package.json
@@ -12,24 +12,29 @@
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.17",
     "axios": "^1.7.3",
+    "chart.js": "^4.4.4",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.5.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
     "leaflet-routing-machine": "^3.2.12",
     "leaflet-search": "^4.0.0",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-id-swiper": "^4.0.0",
+    "react-konva": "^18.2.10",
     "react-leaflet": "^4.2.1",
     "react-particles-js": "^3.6.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-share": "^5.0.3",
     "react-slick": "^0.30.2",
-    "react-spring": "^9.7.3",
+    "react-spring": "^9.7.4",
     "sentiment": "^5.0.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
